argocd/infra/configs/envoy-gateway/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
