argocd/infra/configs/envoy-gateway/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-public
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-public
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-public
  namespace: envoy-gateway-system
  labels:
    scope: public
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: envoy-gateway-public
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.yourdevops.me"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-yourdevops-me-tls
      allowedRoutes:
        namespaces:
          from: All
