argocd/infra/configs/envoy-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.yourdevops.me"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-yourdevops-me-tls
      allowedRoutes:
        namespaces:
          from: All
